ANTLR/output/CoolGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g 2018-08-27 19:40:23

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


	 using System.Text;
	 using CoolGrammar.Grammar;
	

using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace CoolGrammar
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class CoolGrammarParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "ATSIGN", "BREAK", "Block", "CAPITAL_LETTER", "CASE", "CLASS", "COLON", "COMMA", "COMMENT", "CaseExpr", "Class", "DIGIT", "DIV", "DO", "DOT", "DoWhile", "DotObjectInvoke", "DotTypeInvoke", "ELSE", "EQUAL", "ESAC", "ExprList", "FALSE", "FI", "FeatureList", "FuncDef", "FunctionArgsList", "GE", "GT", "HENCE", "IF", "IN", "INHERITS", "INTEGER", "ISVOID", "IdValue", "ImplicitInvoke", "LE", "LET", "LKEY", "LOOP", "LOWER_LETTER", "LPAREN", "LT", "LetExprs", "LocalOrFieldInit", "MINUS", "MULT", "MULTILINE_COMMENT", "NEG", "NEW", "NOT", "OBJ_ID", "OD", "OF", "OR", "PLUS", "POOL", "Params", "Program", "RKEY", "RPAREN", "SELF", "SEMI", "STRING", "THEN", "TRUE", "TYPE_ID", "WHILE", "WS"
	};
	public const int EOF=-1;
	public const int AND=4;
	public const int ASSIGN=5;
	public const int ATSIGN=6;
	public const int BREAK=7;
	public const int Block=8;
	public const int CAPITAL_LETTER=9;
	public const int CASE=10;
	public const int CLASS=11;
	public const int COLON=12;
	public const int COMMA=13;
	public const int COMMENT=14;
	public const int CaseExpr=15;
	public const int Class=16;
	public const int DIGIT=17;
	public const int DIV=18;
	public const int DO=19;
	public const int DOT=20;
	public const int DoWhile=21;
	public const int DotObjectInvoke=22;
	public const int DotTypeInvoke=23;
	public const int ELSE=24;
	public const int EQUAL=25;
	public const int ESAC=26;
	public const int ExprList=27;
	public const int FALSE=28;
	public const int FI=29;
	public const int FeatureList=30;
	public const int FuncDef=31;
	public const int FunctionArgsList=32;
	public const int GE=33;
	public const int GT=34;
	public const int HENCE=35;
	public const int IF=36;
	public const int IN=37;
	public const int INHERITS=38;
	public const int INTEGER=39;
	public const int ISVOID=40;
	public const int IdValue=41;
	public const int ImplicitInvoke=42;
	public const int LE=43;
	public const int LET=44;
	public const int LKEY=45;
	public const int LOOP=46;
	public const int LOWER_LETTER=47;
	public const int LPAREN=48;
	public const int LT=49;
	public const int LetExprs=50;
	public const int LocalOrFieldInit=51;
	public const int MINUS=52;
	public const int MULT=53;
	public const int MULTILINE_COMMENT=54;
	public const int NEG=55;
	public const int NEW=56;
	public const int NOT=57;
	public const int OBJ_ID=58;
	public const int OD=59;
	public const int OF=60;
	public const int OR=61;
	public const int PLUS=62;
	public const int POOL=63;
	public const int Params=64;
	public const int Program=65;
	public const int RKEY=66;
	public const int RPAREN=67;
	public const int SELF=68;
	public const int SEMI=69;
	public const int STRING=70;
	public const int THEN=71;
	public const int TRUE=72;
	public const int TYPE_ID=73;
	public const int WHILE=74;
	public const int WS=75;

	public CoolGrammarParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public CoolGrammarParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return CoolGrammarParser.tokenNames; } }
	public override string GrammarFileName { get { return "E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g"; } }


		
		public override void ReportError(RecognitionException e)
	    	{
	    		base.ReportError(e);
	        		var stringerror =  GetErrorMessage(e, TokenNames);
			Logger.LogError(e.Line, e.CharPositionInLine,stringerror);
	                  
	    	}


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:164:8: public program : ( class SEMI )+ -> ^( Program ( class )+ ) ;
	[GrammarRule("program")]
	public AstParserRuleReturnScope<object, IToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken SEMI2 = default(IToken);
		AstParserRuleReturnScope<object, IToken> class1 = default(AstParserRuleReturnScope<object, IToken>);

		object SEMI2_tree = default(object);
		RewriteRuleITokenStream stream_SEMI=new RewriteRuleITokenStream(adaptor,"token SEMI");
		RewriteRuleSubtreeStream stream_class=new RewriteRuleSubtreeStream(adaptor,"rule class");
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(164, 2);
		try
		{
			// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:164:16: ( ( class SEMI )+ -> ^( Program ( class )+ ) )
			DebugEnterAlt(1);
			// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:165:3: ( class SEMI )+
			{
			DebugLocation(165, 3);
			// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:165:3: ( class SEMI )+
			int cnt1=0;
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==CLASS))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch (alt1)
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:165:4: class SEMI
					{
					DebugLocation(165, 4);
					PushFollow(Follow._class_in_program851);
					class1=@class();
					PopFollow();

					stream_class.Add(class1.Tree);
					DebugLocation(165, 10);
					SEMI2=(IToken)Match(input,SEMI,Follow._SEMI_in_program853);  
					stream_SEMI.Add(SEMI2);


					}
					break;

				default:
					if (cnt1 >= 1)
						goto loop1;

					EarlyExitException eee1 = new EarlyExitException( 1, input );
					DebugRecognitionException(eee1);
					throw eee1;
				}
				cnt1++;
			}
			loop1:
				;

			} finally { DebugExitSubRule(1); }



			{
			// AST REWRITE
			// elements: class
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 166:3: -> ^( Program ( class )+ )
			{
				DebugLocation(166, 7);
				// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:166:7: ^( Program ( class )+ )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(166, 10);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(Program, "Program"), root_1);

				DebugLocation(166, 18);
				if (!(stream_class.HasNext))
				{
					throw new RewriteEarlyExitException();
				}
				while ( stream_class.HasNext )
				{
					DebugLocation(166, 18);
					adaptor.AddChild(root_1, stream_class.NextTree());

				}
				stream_class.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(167, 2);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_class();
	partial void LeaveRule_class();

	// $ANTLR start "class"
	// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:169:1: class : CLASS TYPE_ID ( INHERITS TYPE_ID )? LKEY feature_list RKEY -> ^( CLASS TYPE_ID feature_list ( TYPE_ID )? ) ;
	[GrammarRule("class")]
	private AstParserRuleReturnScope<object, IToken> @class()
	{
		EnterRule_class();
		EnterRule("class", 2);
		TraceIn("class", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken CLASS3 = default(IToken);
		IToken TYPE_ID4 = default(IToken);
		IToken INHERITS5 = default(IToken);
		IToken TYPE_ID6 = default(IToken);
		IToken LKEY7 = default(IToken);
		IToken RKEY9 = default(IToken);
		AstParserRuleReturnScope<object, IToken> feature_list8 = default(AstParserRuleReturnScope<object, IToken>);

		object CLASS3_tree = default(object);
		object TYPE_ID4_tree = default(object);
		object INHERITS5_tree = default(object);
		object TYPE_ID6_tree = default(object);
		object LKEY7_tree = default(object);
		object RKEY9_tree = default(object);
		RewriteRuleITokenStream stream_TYPE_ID=new RewriteRuleITokenStream(adaptor,"token TYPE_ID");
		RewriteRuleITokenStream stream_RKEY=new RewriteRuleITokenStream(adaptor,"token RKEY");
		RewriteRuleITokenStream stream_LKEY=new RewriteRuleITokenStream(adaptor,"token LKEY");
		RewriteRuleITokenStream stream_INHERITS=new RewriteRuleITokenStream(adaptor,"token INHERITS");
		RewriteRuleITokenStream stream_CLASS=new RewriteRuleITokenStream(adaptor,"token CLASS");
		RewriteRuleSubtreeStream stream_feature_list=new RewriteRuleSubtreeStream(adaptor,"rule feature_list");
		try { DebugEnterRule(GrammarFileName, "class");
		DebugLocation(169, 2);
		try
		{
			// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:169:8: ( CLASS TYPE_ID ( INHERITS TYPE_ID )? LKEY feature_list RKEY -> ^( CLASS TYPE_ID feature_list ( TYPE_ID )? ) )
			DebugEnterAlt(1);
			// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:170:3: CLASS TYPE_ID ( INHERITS TYPE_ID )? LKEY feature_list RKEY
			{
			DebugLocation(170, 3);
			CLASS3=(IToken)Match(input,CLASS,Follow._CLASS_in_class886);  
			stream_CLASS.Add(CLASS3);

			DebugLocation(170, 9);
			TYPE_ID4=(IToken)Match(input,TYPE_ID,Follow._TYPE_ID_in_class888);  
			stream_TYPE_ID.Add(TYPE_ID4);

			DebugLocation(170, 17);
			// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:170:17: ( INHERITS TYPE_ID )?
			int alt2=2;
			try { DebugEnterSubRule(2);
			try { DebugEnterDecision(2, false);
			int LA2_0 = input.LA(1);

			if ((LA2_0==INHERITS))
			{
				alt2 = 1;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:170:18: INHERITS TYPE_ID
				{
				DebugLocation(170, 18);
				INHERITS5=(IToken)Match(input,INHERITS,Follow._INHERITS_in_class891);  
				stream_INHERITS.Add(INHERITS5);

				DebugLocation(170, 27);
				TYPE_ID6=(IToken)Match(input,TYPE_ID,Follow._TYPE_ID_in_class893);  
				stream_TYPE_ID.Add(TYPE_ID6);


				}
				break;

			}
			} finally { DebugExitSubRule(2); }

			DebugLocation(170, 37);
			LKEY7=(IToken)Match(input,LKEY,Follow._LKEY_in_class897);  
			stream_LKEY.Add(LKEY7);

			DebugLocation(170, 42);
			PushFollow(Follow._feature_list_in_class899);
			feature_list8=feature_list();
			PopFollow();

			stream_feature_list.Add(feature_list8.Tree);
			DebugLocation(170, 56);
			RKEY9=(IToken)Match(input,RKEY,Follow._RKEY_in_class902);  
			stream_RKEY.Add(RKEY9);



			{
			// AST REWRITE
			// elements: feature_list, CLASS, TYPE_ID, TYPE_ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 171:3: -> ^( CLASS TYPE_ID feature_list ( TYPE_ID )? )
			{
				DebugLocation(171, 6);
				// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:171:6: ^( CLASS TYPE_ID feature_list ( TYPE_ID )? )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(171, 9);
				root_1 = (object)adaptor.BecomeRoot(stream_CLASS.NextNode(), root_1);

				DebugLocation(171, 15);
				adaptor.AddChild(root_1, stream_TYPE_ID.NextNode());
				DebugLocation(171, 23);
				adaptor.AddChild(root_1, stream_feature_list.NextTree());
				DebugLocation(171, 36);
				// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:171:36: ( TYPE_ID )?
				if (stream_TYPE_ID.HasNext)
				{
					DebugLocation(171, 36);
					adaptor.AddChild(root_1, stream_TYPE_ID.NextNode());

				}
				stream_TYPE_ID.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("class", 2);
			LeaveRule("class", 2);
			LeaveRule_class();
		}
		DebugLocation(172, 2);
		} finally { DebugExitRule(GrammarFileName, "class"); }
		return retval;

	}
	// $ANTLR end "class"

	partial void EnterRule_feature_list();
	partial void LeaveRule_feature_list();

	// $ANTLR start "feature_list"
	// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:173:1: feature_list : ( feature SEMI )* -> ^( FeatureList ( feature )* ) ;
	[GrammarRule("feature_list")]
	private AstParserRuleReturnScope<object, IToken> feature_list()
	{
		EnterRule_feature_list();
		EnterRule("feature_list", 3);
		TraceIn("feature_list", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken SEMI11 = default(IToken);
		AstParserRuleReturnScope<object, IToken> feature10 = default(AstParserRuleReturnScope<object, IToken>);

		object SEMI11_tree = default(object);
		RewriteRuleITokenStream stream_SEMI=new RewriteRuleITokenStream(adaptor,"token SEMI");
		RewriteRuleSubtreeStream stream_feature=new RewriteRuleSubtreeStream(adaptor,"rule feature");
		try { DebugEnterRule(GrammarFileName, "feature_list");
		DebugLocation(173, 2);
		try
		{
			// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:173:15: ( ( feature SEMI )* -> ^( FeatureList ( feature )* ) )
			DebugEnterAlt(1);
			// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:174:3: ( feature SEMI )*
			{
			DebugLocation(174, 3);
			// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:174:3: ( feature SEMI )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, false);
				int LA3_0 = input.LA(1);

				if ((LA3_0==OBJ_ID))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:174:4: feature SEMI
					{
					DebugLocation(174, 4);
					PushFollow(Follow._feature_in_feature_list933);
					feature10=feature();
					PopFollow();

					stream_feature.Add(feature10.Tree);
					DebugLocation(174, 12);
					SEMI11=(IToken)Match(input,SEMI,Follow._SEMI_in_feature_list935);  
					stream_SEMI.Add(SEMI11);


					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }



			{
			// AST REWRITE
			// elements: feature
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 175:3: -> ^( FeatureList ( feature )* )
			{
				DebugLocation(175, 6);
				// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:175:6: ^( FeatureList ( feature )* )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(175, 9);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(FeatureList, "FeatureList"), root_1);

				DebugLocation(175, 22);
				// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:175:22: ( feature )*
				while ( stream_feature.HasNext )
				{
					DebugLocation(175, 22);
					adaptor.AddChild(root_1, stream_feature.NextTree());

				}
				stream_feature.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("feature_list", 3);
			LeaveRule("feature_list", 3);
			LeaveRule_feature_list();
		}
		DebugLocation(176, 2);
		} finally { DebugExitRule(GrammarFileName, "feature_list"); }
		return retval;

	}
	// $ANTLR end "feature_list"

	partial void EnterRule_feature();
	partial void LeaveRule_feature();

	// $ANTLR start "feature"
	// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:178:1: feature : ( localOrFieldInit -> localOrFieldInit | method -> method );
	[GrammarRule("feature")]
	private AstParserRuleReturnScope<object, IToken> feature()
	{
		EnterRule_feature();
		EnterRule("feature", 4);
		TraceIn("feature", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> localOrFieldInit12 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> method13 = default(AstParserRuleReturnScope<object, IToken>);

		RewriteRuleSubtreeStream stream_method=new RewriteRuleSubtreeStream(adaptor,"rule method");
		RewriteRuleSubtreeStream stream_localOrFieldInit=new RewriteRuleSubtreeStream(adaptor,"rule localOrFieldInit");
		try { DebugEnterRule(GrammarFileName, "feature");
		DebugLocation(178, 2);
		try
		{
			// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:178:10: ( localOrFieldInit -> localOrFieldInit | method -> method )
			int alt4=2;
			try { DebugEnterDecision(4, false);
			int LA4_0 = input.LA(1);

			if ((LA4_0==OBJ_ID))
			{
				int LA4_1 = input.LA(2);

				if ((LA4_1==COLON))
				{
					alt4 = 1;
				}
				else if ((LA4_1==LPAREN))
				{
					alt4 = 2;
				}
				else
				{
					NoViableAltException nvae = new NoViableAltException("", 4, 1, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}
			else
			{
				NoViableAltException nvae = new NoViableAltException("", 4, 0, input);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:179:5: localOrFieldInit
				{
				DebugLocation(179, 5);
				PushFollow(Follow._localOrFieldInit_in_feature969);
				localOrFieldInit12=localOrFieldInit();
				PopFollow();

				stream_localOrFieldInit.Add(localOrFieldInit12.Tree);


				{
				// AST REWRITE
				// elements: localOrFieldInit
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (object)adaptor.Nil();
				// 179:22: -> localOrFieldInit
				{
					DebugLocation(179, 25);
					adaptor.AddChild(root_0, stream_localOrFieldInit.NextTree());

				}

				retval.Tree = root_0;
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// E:\\De Hiran\\CoolCompiler\\ANTLR\\CoolGrammar.g:180:7: method
				{
				DebugLocation(180, 7);
